[package]
name = "foa_dswifi"
version = "0.1.0"
edition = "2021"


[dependencies]
foa = { git = "https://github.com/esp32-open-mac/FoA.git", package = "foa"}

# ESP-HAL dependencies
esp-hal = { version = "0.23.1", features = [
    "esp32", "defmt"
] }
esp-hal-embassy = { version = "0.6.0", features = [
    "esp32", "defmt"
] }
esp-alloc = { version = "0.6.0", features = ["defmt"] }
esp-backtrace = { version = "0.15.0", features = [
    "esp32",
    "panic-handler",
    "defmt"
] }
esp-println = { version = "0.13.0", features = ["defmt-espflash","critical-section","uart","esp32"], default-features = false }

# Embassy dependencies
embassy-time = { version = "0.4.0", features = ["generic-queue-8", "defmt"] }
embassy-executor = { version = "0.7.0", features = ["defmt"] }

# Misc
#log = "0.4.21"
static_cell = { version = "2.1.0" }
ieee80211 = { git = "https://github.com/Frostie314159/ieee80211-rs", default-features = false, features = ["defmt"]}
embedded-io-async = "0.6.1"
embassy-futures = "0.1.1"
embassy-sync = "0.6.1"
hex-literal = "0.4.1"
bitflags = "2.6.0"
defmt = "0.3.10"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
